# es-client-rewrite

./: .gitignore  AUTOCOMPLETE_GUIDE.md  CLAUDE.md  CROSS_PLATFORM_BUILD.md  FINAL_DEPLOY_GUIDE.md  GITHUB_DEPLOY_GUIDE.md  QUICK_START.md  README.md  SUCCESS_GUIDE.md  TODO.md  VISUALIZATION_TEST.md  WEB_VERSION_GUIDE.md  package-lock.json  package.json  test_data.csv  vite.config.ts
.github/workflows/: build.yml  windows-build.yml
docker/: Dockerfile.linux
es-client-rewrite/: index.html  package-lock.json  package.json  tsconfig.json
es-client-rewrite/src/: App.vue  main.ts  router.ts  types.ts
es-client-rewrite/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: build-macos.sh  build-windows.bat  build.sh  deploy-github.bat  deploy-github.sh
src/: App.vue  main.ts  router.ts  style.css  types.ts
src-tauri/: Cargo.toml  Cargo_backup.toml  test_import.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  error.rs  es_client.rs  export.rs  import.rs  lib.rs  main.rs  main_backup.rs  main_test.rs  types.rs
src/api/: index.ts  tauri.ts  web.ts
src/components/: ChartVisualization.vue  ErrorBoundary.vue  FieldEditor.vue  GlobalLoadingOverlay.vue  JsonEditor.vue  MappingEditor.vue  NodeDetail.vue  NodeMonitoring.vue  PerformanceAnalysis.vue  QueryCondition.vue  QueryEditor.vue  QueryGroup.vue  QueryHistory.vue  SearchResults.vue  SqlQuery.vue  ThemeSwitcher.vue  VirtualTable.vue  VisualizationPanel.vue
src/plugins/: echarts.ts
src/stores/: aggregation.ts  connection.ts  dashboard.ts  document.ts  index.ts  indexSettings.ts  loading.ts  (+11 more)
(+26 files in other folders)
