[package]
name = "es-client-rewrite"
version = "1.0.0"
description = "Elasticsearch client built with Rust + Tauri"
authors = ["Claude"]
license = "Apache-2.0"
repository = ""
edition = "2021"

[lib]
name = "es_client_rewrite_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["shell-open", "wry"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1.0", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
argon2 = "0.5"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
